:package: updated package.json: new main

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mercadolibre-sdk",
   "version": "1.0.0",
   "description": "Mercado Libre SDK for Nodejs",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "prepare": "husky install",
     "lint": "eslint .",
