--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,13 +12,20 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Test using Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '14'
+
       - name: Clean install and run jest
         run: yarn install --frozen-lockfile
+
       - name: Publish to NPM
         uses: S-DevTools/npm-publish@v1
         with:
-          token: ${{ secrets.NPM_TOKEN }
+          token: ${{ secrets.NPM_TOKEN }}
+
+      - if: steps.publish.outputs.type != 'none'
+        run: |
+          echo "Version changed: ${{ steps.publish.outputs.old-version }} => ${{ steps.publish.outputs.version }}"
